codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__slash_popup_si.snap
---
source: tui/src/bottom_pane/chat_composer.rs
assertion_line: 9718
expression: terminal.backend()
---
"› /side  start a side conversation in an ephemeral fork     "
"────────────────────────────────────────────────────────────"
"❯ /si                                                       "
"────────────────────────────────────────────────────────────"
"                                         100% context left  "
